moved home page over to rails

--- a/app/assets/stylesheets/home_pages.css
+++ b/app/assets/stylesheets/home_pages.css
@@ -3,19 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @font-face {
-    font-family: 'NexaLight';
-    src: url('/fonts/nexalight/nexalight.eot');
-    src: url('/fonts/nexalight/nexalight.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/nexalight/nexalight.woff2') format('woff2'),
-         url('/fonts/nexalight/nexalight.woff') format('woff'),
-         url('/fonts/nexalight/nexalight.ttf') format('truetype'),
-         url('/fonts/nexalight/nexalight.svg#nexa_lightregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'NexaBold';
     src: url('/fonts/nexabold/nexabold.eot');
     src: url('/fonts/nexabold/nexabold.eot?#iefix') format('embedded-opentype'),
@@ -23,6 +10,19 @@
          url('/fonts/nexabold/nexabold.woff') format('woff'),
          url('/fonts/nexabold/nexabold.ttf') format('truetype'),
          url('/fonts/nexabold/nexabold.svg#nexa_boldregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'NexaLight';
+    src: url('/fonts/nexalight/nexalight.eot');
+    src: url('/fonts/nexalight/nexalight.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/nexalight/nexalight.woff2') format('woff2'),
+         url('/fonts/nexalight/nexalight.woff') format('woff'),
+         url('/fonts/nexalight/nexalight.ttf') format('truetype'),
+         url('/fonts/nexalight/nexalight.svg#nexa_lightregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -60,7 +60,7 @@ nav > ul > li {
 	font-style: sans-serif;
 	margin-right: 30px;
 	font-size: 18px;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	-webkit-transition: background-color 700ms linear;
     -moz-transition: background-color 700ms linear;
     -o-transition: background-color 700ms linear;
@@ -68,7 +68,15 @@ nav > ul > li {
     color: background-color 700ms linear;
 }
 
-nav.scrolled > ul > li {
+nav > ul > li > a {
+	color: white;
+}
+
+nav > ul > li > a:hover {
+	color: black;
+}
+
+nav.scrolled > ul > li > a {
 	color: #3ABF70;
 }
 
@@ -90,7 +98,7 @@ nav.scrolled > ul > li {
 	position: absolute;
 	height: 650px;
 	width: 100%;
-	background-image: url('gohomephoto.jpg');
+	background-image: url('gohomephoto2.jpg');
 	background-size: cover;
 	background-position: 60% 60%;
 	background-repeat: no-repeat;
@@ -111,14 +119,14 @@ nav.scrolled > ul > li {
 
 .home-page-image > header > h1 {
 	color: white;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	line-height: 45px;
 	font-size: 40px;
 }
 
 .home-page-image > header > h5 {
 	color: white;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 }
 
 .call-to-action {
@@ -130,7 +138,7 @@ nav.scrolled > ul > li {
 
 .call-to-action > p {
 	color: white;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	font-size: 40px;
 	text-align: center;
 	color: #3ABF70;
@@ -143,6 +151,7 @@ nav.scrolled > ul > li {
 	margin-top: 15px;
 	background-color: rgba(0,0,0,0.5);
 	opacity: 0;
+	text-align: center;
 }
 
 #test-go-moment {
@@ -194,7 +203,7 @@ nav.scrolled > ul > li {
 }
 
 .product-overview > header > h2 {
-	font-family: NexaBold;
+	font-family: "Source Sans Pro";
 	font-size: 30px;
 	color: #3ABF70;
 }
@@ -203,7 +212,7 @@ nav.scrolled > ul > li {
 	width: 400px;
 	position: relative;
 	margin: 0 auto;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	font-size: 20px;
 }
 
@@ -220,9 +229,9 @@ nav.scrolled > ul > li {
 }
 
 #sell-point-1 {
-	margin: -300px 0 0 300px;
+	margin: -350px 0 0 300px;
 	width: 400px;
-	opacity: 0;
+	opacity: 1;
 }
 
 #sell-point-1 > p {
@@ -237,38 +246,113 @@ nav.scrolled > ul > li {
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin-top: -50px;
-	margin-left: -100px;
-	opacity: 0;
+	margin-left: -50px;
+	opacity: 1;
 }
 
 .iphone-gomoment-image {
 	height: 402px;
 	width: 225px;
-	margin: -521px 0 0 -30px;
+	margin: -521px 0 0 20px;
 	background-image: url('gochat.png');
 	background-size: contain;
+	opacity: 1;
+}
+
+.iphone-gomoment-demo-overlay {
+	height: 402px;
+	width: 225px;
+	margin: -402px 0 0 20px;
+	background-color: rgba(0,0,0,0);
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; 
+}
+
+.iphone-gomoment-demo-overlay > p {
+	color: white;
+	font-family: "Source Sans Pro";
+	font-size: 25px;
+	width: 200px;
+	text-align: center;
+	margin: 0 auto;
 	opacity: 0;
+	padding-top: 150px;
+	height: 100%;
+	width: 100%;
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.iphone-gomoment-demo-overlay > p:hover {
+	opacity: 1;
+} 
+
+.iphone-gomoment-demo-overlay:hover {
+	background-color: rgba(0,0,0,0.7);
 }
 
 .imac-image {
 	position: relative;
 	height: 450px;
 	width: 550px;
-	margin: 20px 0 0 -30px;
+	margin: 20px 0 0 20px;
 	background-image: url('gomac.png');
 	background-size: contain;
 	background-repeat: no-repeat;
-	opacity: 0; 
+	opacity: 1; 
 }
 
 .imac-gomoment-image {
 	height: 290px;
 	width: 505px;
-	margin: -428px 0 0 -7px;
+	margin: -428px 0 0 43px;
 	background-image: url('messages.png');
 	background-size: contain;
 	background-repeat: no-repeat;
+	opacity: 1;
+}
+
+.imac-gomoment-demo-overlay {
+	position: absolute;
+	background-color: rgba(0,0,0,0);
+	height: 290px;
+	width: 505px;
+	margin: -345px 0 0 43px;
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear; 
+}
+
+.imac-gomoment-demo-overlay > p {
+	text-align: center;
+	font-size: 25px;
+	font-family: "Source Sans Pro";
+	color: white;
 	opacity: 0;
+	height: 100%;
+	width: 100%;
+	padding-top: 130px;
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.imac-gomoment-demo-overlay > p:hover {
+	opacity: 1;
+}
+
+.imac-gomoment-demo-overlay:hover {
+	background-color: rgba(0,0,0,0.7);
 }
 
 #imac-gomoment-image-2 {
@@ -284,8 +368,8 @@ nav.scrolled > ul > li {
 }
 
 #sell-point-2 {
-	opacity: 0;
-	margin-top: -200px;
+	opacity: 1;
+	margin-top: -250px;
 }
 
 #sell-point-p-2 {
@@ -294,13 +378,13 @@ nav.scrolled > ul > li {
 }
 
 .sell-point > header > h2 {
-	font-family: NexaBold;
+	font-family: "Source Sans Pro";
 	font-size: 30px;
 	color: #3ABF70;
 }
 
 .sell-point > p {
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	text-align: left;
 }
 
@@ -362,12 +446,103 @@ nav.scrolled > ul > li {
 .learn-more > a {
 	color: white;
 	font-size: 25px;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	-webkit-transition: color 200ms linear;
     -moz-transition: color 200ms linear;
     -o-transition: color 200ms linear;
     -ms-transition: color 200ms linear;
     transition: color 200ms linear;
+}
+
+#myModal2 {
+	width: 500px;
+	height: 525px;
+	background: linear-gradient(180deg, #ffffff, #f2f2f2);
+}
+
+#myModal1 {
+	width: 500px;
+	height: 525px;
+	background: linear-gradient(180deg, #ffffff, #f2f2f2);
+}
+
+.close-reveal-modal {
+	margin-top: -10px;
+	margin-right: -10px;
+}
+
+.modal-selling-points {
+	margin-bottom: 80px;
+}
+
+.modal-selling-points > h1 {
+	font-family: Source Sans Pro;
+	font-size: 40px;
+	text-align: center;
+	color: #3ABF70;
+	line-height: 40px;
+	margin-bottom: 20px;
+}
+
+.modal-selling-points > ul > li {
+	font-family: Source Sans Pro;
+	font-size: 20px;
+}
+
+#name1 {
+	border: 2px solid #3ABF70;
+	border-left: none;
+	height: 50px;
+}
+
+#email1 {
+	border: 2px solid #3ABF70;
+	border-left: none;
+	height: 50px;
+}
+
+#name2 {
+	border: 2px solid #3ABF70;
+	border-left: none;
+	height: 50px;
+}
+
+#email2 {
+	border: 2px solid #3ABF70;
+	border-left: none;
+	height: 50px;
+}
+
+#modal-label {
+	border: 2px solid #3ABF70;
+	padding-top: 3px;
+	border-right: none;
+	color: white;
+	background: #3ABF70;
+	font-family: Source Sans Pro;
+	font-size: 18px;
+	height: 50px;
+}
+
+#modal-submit {
+	width: 437px;
+	height: 60px;
+	font-size: 20px;
+	padding-top: 20px;
+	margin: 432px 9px 0 0;
+	background: #3ABF70;
+	color: white;
+	font-family: Source Sans Pro;
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+#modal-submit:hover {
+	background: black;
+	color: #3ABF70;
 }
 
 .clients-section {
@@ -383,7 +558,7 @@ nav.scrolled > ul > li {
 
 .clients-section > header > h2 {
 	color: #3ABF70;
-	font-family: NexaBold;
+	font-family: "Source Sans Pro";
 }
 
 .logo-container {
@@ -407,6 +582,16 @@ nav.scrolled > ul > li {
 	display: inline-block;
 	background-size: contain;
 	background-repeat: no-repeat;
+	-webkit-transition: all 100ms linear;
+    -moz-transition: all 100ms linear;
+    -o-transition: all 100ms linear;
+    -ms-transition: all 100ms linear;
+    transition: all 100ms linear;
+}
+
+.logo-container > ul > li:hover {
+	border-right: 5px solid #3ABF70;
+	border-bottom: 5px solid #3ABF70;
 }
 
 #logo-second-row {
@@ -415,43 +600,72 @@ nav.scrolled > ul > li {
 
 .logo-container > ul > li:nth-child(1) {
 	background-image: url('line.jpeg');
+	background-size: 200px 200px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 .logo-container > ul > li:nth-child(2) {
 	background-image: url('sheraton.png');
+	background-size: 150px 150px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 .logo-container > ul > li:nth-child(3) {
 	background-image: url('fairfield.jpg');
+	background-size: 200px 200px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 .logo-container > ul > li:nth-child(4) {
 	background-image: url('best_western.jpg');
+	background-size: 130px 130px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 .logo-container > ul > li:nth-child(5) {
 	background-image: url('Wyndham201.png');
+	background-size: 160px 160px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 #logo-second-row > li:nth-child(1) {
 	background-image: url('crowne.jpg');
+	background-size: 165px 165px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 #logo-second-row > li:nth-child(2) {
 	background-image: url('hilton.jpg');
+	background-size: 200px 200px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 #logo-second-row > li:nth-child(3) {
-	background-image: url('holiday_inn.gif');
+	background-image: url('embassy.jpg');
+	background-size: 130px 130px;
+	background-position: 50% 50%;
 	background-color: white;
 }
 
 #logo-second-row > li:nth-child(4) {
 	background-image: url('double.gif');
+	background-size: 160px 160px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 #logo-second-row > li:nth-child(5) {
 	background-image: url('hampton.jpg');
+	background-size: 160px 160px;
+	background-position: 50% 50%;
+	background-color: white;
 }
 
 .product-features-container {
@@ -475,7 +689,7 @@ nav.scrolled > ul > li {
 }
 
 .product-feature-header > h2 {
-	font-family: NexaBold;
+	font-family: "Source Sans Pro";
 	color: #3ABF70;
 }
 
@@ -500,31 +714,40 @@ nav.scrolled > ul > li {
 	height: 50px;
 	width: 100%;
 	background-color: black;
-	margin-top: -50px;
 	text-align: center;
 	color: white;
-	font-family: NexaLight;
+	font-family: "Source Sans Pro";
 	padding-top: 13px;
-	-webkit-transition: margin-top 200ms linear;
-    -moz-transition: margin-top 200ms linear;
-    -o-transition: margin-top 200ms linear;
-    -ms-transition: margin-top 200ms linear;
-    transition: margin-top 200ms linear;
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
 }
 
 .feature-description > p {
 	font-size: 15px;
+	color: #3ABF70;
+	-webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    -ms-transition: all 200ms linear;
+    transition: all 200ms linear;
 }
 
 .feature-description.hovered {
-	margin-top: 0px;
+	height: 65px;
+}
+
+.feature-description.hovered > p {
+	color: white;
 }
 
 .feature-icon {
 	height: 50px;
 	width: 50px;
 	/*border: 1px solid black;*/
-	margin-top: 80px;
+	margin-top: 60px;
 	margin-left: 75px;
 	background-size: contain;
 }
@@ -552,11 +775,6 @@ nav.scrolled > ul > li {
 #reports {
 	background-image: url('fi-page-export.svg');
 }
-
-
-
-
-
 
 
 
