--- a/app/assets/stylesheets/home_pages.css
+++ b/app/assets/stylesheets/home_pages.css
@@ -163,7 +163,7 @@ nav.scrolled > ul > li > a {
 
 #test-go-moment-input {
 	background-color: transparent;
-	color: #3ABF70;
+	color: white;
 	height: 50px;
 	font-size: 20px;
 	border: 3px solid #3ABF70;
@@ -177,6 +177,29 @@ nav.scrolled > ul > li > a {
 	border: 3px solid #3ABF70;
 	background-color: #3ABF70;
 	border-left: none;
+	padding-top: 3px;
+	-webkit-transition: all 100ms linear;
+    -moz-transition: all 100ms linear;
+    -o-transition: all 100ms linear;
+    -ms-transition: all 100ms linear;
+    transition: all 100ms linear;
+}
+
+#test-go-moment-submit:hover {
+	background-color: black;
+}
+
+#test-go-moment-submit > a {
+	color: white;
+	-webkit-transition: all 100ms linear;
+    -moz-transition: all 100ms linear;
+    -o-transition: all 100ms linear;
+    -ms-transition: all 100ms linear;
+    transition: all 100ms linear; 
+}
+
+#test-go-moment-submit > a:hover {
+	color: #3ABF70;
 }
 
 .product-summary {
@@ -221,6 +244,21 @@ nav.scrolled > ul > li > a {
 	height: 600px;
 	position: relative;
 	margin: 100px auto 0 auto;
+	-webkit-transition: all 3000ms linear;
+    -moz-transition: all 3000ms linear;
+    -o-transition: all 3000ms linear;
+    -ms-transition: all 3000ms linear;
+    transition: all 3000ms linear;
+}
+
+/* classes to add for animation on .sell-point-container */
+
+.hidden {
+	opacity: 0;
+}
+
+.visible {
+	opacity: 1;
 }
 
 #sell-container {
@@ -229,9 +267,8 @@ nav.scrolled > ul > li > a {
 }
 
 #sell-point-1 {
-	margin: -350px 0 0 300px;
+	margin: -300px 0 0 300px;
 	width: 400px;
-	opacity: 1;
 }
 
 #sell-point-1 > p {
@@ -247,7 +284,6 @@ nav.scrolled > ul > li > a {
 	background-repeat: no-repeat;
 	margin-top: -50px;
 	margin-left: -50px;
-	opacity: 1;
 }
 
 .iphone-gomoment-image {
@@ -256,7 +292,6 @@ nav.scrolled > ul > li > a {
 	margin: -521px 0 0 20px;
 	background-image: url('gochat.png');
 	background-size: contain;
-	opacity: 1;
 }
 
 .iphone-gomoment-demo-overlay {
@@ -776,6 +811,51 @@ nav.scrolled > ul > li > a {
 	background-image: url('fi-page-export.svg');
 }
 
+footer > h2 {
+	font-family: Source Sans Pro;
+	text-align: center;
+	margin-top: 20px;
+}
 
+footer > h2 > a {
+	color: #3ABF70;
+}
+
+footer {
+	background: linear-gradient(180deg, #ffffff, #f2f2f2);
+}
+
+.twitter-icon {
+	height: 70px;
+	width: 70px;
+	margin: 0 auto;
+	background-image: url('fi-social-twitter.svg');
+	background-size: cover;
+}
+
+.tweet {
+	/*border: 1px solid black;*/
+	margin: 0 auto;
+	padding-top: 20px;
+	height: 150px;
+	width: 500px;
+	font-family: "Source Sans Pro";
+	font-size: 20px;
+	color: #3ABF70;
+	text-align: center;
+}
+
+.footer-info {
+	height: 50px;
+	width: 100%;
+	background-color: black;
+}
+
+.footer-info > p {
+	color: #3ABF70;
+	font-family: "Source Sans Pro";
+	text-align: center;
+	padding-top: 10px;
+}
 
 
