--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -19,7 +19,7 @@
         <h1>"This brings us closer than ever to our guests"</h1>
         <h5>-Area General Manager</h5>
       </header>
-    <!--   <div class="test-go-moment-container">
+      <div class="test-go-moment-container">
         <div class="call-to-action">
           <p>See for yourself</p>
         </div>
@@ -27,15 +27,15 @@
           <div class="large-12 columns">
             <div class="row collapse">
               <div class="small-9 columns">
-                <input type="text" id="test-go-moment-input" placeholder="555-555-5555" />
+                <input type="text" id="test-go-moment-input" placeholder="Enter your number" />
               </div>
               <div class="small-3 columns">
-                <span class="postfix" id="test-go-moment-submit">Show Me</span>
+                <span class="postfix" id="test-go-moment-submit" onclick="demoMessage()"><a href="#">Show Me</a></span>
               </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
   <div id="about"></div>
@@ -228,7 +228,20 @@
   </div>
 
   <footer>
-    
+    <h2><a href="https://twitter.com/gomoment" target="_blank">@GoMoment</a></h2>
+    <div class="twitter-icon"></div>
+    <ul class="example-orbit" data-orbit>
+      <% @tweets.each do |t| %>
+      <li>
+        <div class="tweet">
+          <%= t.text %>
+        </div>
+      </li>
+      <% end %>
+    </ul>
+    <div class="footer-info">
+      <p>GoMoment 2015</p>
+    </div>    
   </footer>
 
   <script>
@@ -238,7 +251,17 @@
     $(this).children("div.feature-description").toggleClass("hovered");
   });
 
-  $(document).foundation();
+  $(document).foundation({
+      orbit: {
+            timer_speed: 7000,
+            slide_number: false,
+            pause_on_hover: false,
+            navigation_arrows: false,
+            resume_on_mouseout: true,
+            timer: true,
+            bullets: false
+          }
+    });
 
   </script>
 
