updates for testing demo

--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -30,7 +30,7 @@
                 <input type="text" id="test-go-moment-input" placeholder="Enter your number" />
               </div>
               <div class="small-3 columns">
-                <span class="postfix" id="test-go-moment-submit" onclick="demoMessage()"><a href="#">Show Me</a></span>
+                <span class="postfix" id="test-go-moment-submit" onclick="testGo()"><a href="#">Show Me</a></span>
               </div>
             </div>
           </div>
